修复textnow保号脚本

--- a/.github/workflows/actions-textnow.yml
+++ b/.github/workflows/actions-textnow.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        python-version: [3.7]
+        python-version: [3.8]
         #python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
 
     steps:
@@ -48,14 +48,24 @@ jobs:
     #- name: Make sure pytest is working
     #  run: |
     #    echo "def test_1(): pass" > nothing.py
-    #    pytest nothing.py    
-    
+    #    pytest nothing.py
+    - name: Cache Cookies
+      uses: actions/cache@v2
+      with:
+        path: ~/cache.tgz
+        key: ${{ github.repository_owner }}_${{ github.workflow }}_tn
+        restore-keys: ${{ github.repository_owner }}_${{ github.workflow }}_
+        
     # TextNow保号任务
     - name: TextNow protect number
       env:
         TEXTNOW_USERNAME: ${{ secrets.TEXTNOW_USERNAME }}
         TEXTNOW_PASSWORD: ${{ secrets.TEXTNOW_PASSWORD }}
+        TEXTNOW_COOKIES: ${{ secrets.TEXTNOW_COOKIES }}
         TEXTNOW_NUMBER: ${{ secrets.TEXTNOW_NUMBER }}
         TEXTNOW_MSG: ${{ secrets.TEXTNOW_MSG }}
       run: |
+        mkdir .cache
+        if [ -e ~/cache.tgz ]; then tar zxf ~/cache.tgz; fi
         python scripts/_textnow.py
+        tar zcf ~/cache.tgz .cache
